RFQDealerReply updates - in EnterWalletPassword.ui changed the window title to 'Activate Auto-Sign' and changed the Confirm button to flat so that it shows up as solid blue when enabled - adjusted the scrollArea to try and fix the squishing of the label controls in the top of RFQDealerReply experienced by Scott - improved alignment of the drop down menus, it should be close to perfect now - fixed the gap difference between toggle switch and drop down, the ones in auto-sign had a smaller gap than the ones in auto-quote - added darker gray color to show when ToggleSwitch is in disabled state

--- a/BlockSettleUILib/Stylesheet/stylesheet.css
+++ b/BlockSettleUILib/Stylesheet/stylesheet.css
@@ -1390,7 +1390,7 @@ ToggleSwitch::groove:horizontal {
     height: 16px; }
     
 ToggleSwitch::groove:horizontal[enabled=false] {
-    border: 1px solid #81888f; }
+    border: 1px solid #535b63; }
 
 ToggleSwitch::handle:horizontal {
     background: #81888f;
@@ -1398,7 +1398,12 @@ ToggleSwitch::handle:horizontal {
     width: 16px;
     margin: -1px -1px -1px -1px;
     border-radius: 8px; }
-    
+  
+ToggleSwitch::handle:horizontal[enabled=false] {
+    background: #535b63;
+    border: 1px solid #535b63;       
+}
+ 
  ToggleSwitch::handle:horizontal[toggleOn=true][enabled=true] {
     background: #247dac;
     border: 1px solid #247dac; }
